--- a/web-ext-2/src/App.css
+++ b/web-ext-2/src/App.css
@@ -28,14 +28,20 @@
   color: #61dafb;
 }
 
-.Time {
+.time {
   font-size: 88px;
   font-weight: 300;
 }
 
-.Date {
+.date {
   font-size: 48px;
   font-weight: 200;
+}
+
+.greeting {
+  font-size: 24px;
+  font-weight: 100;
+  font-style: italic;
 }
 
 @keyframes App-logo-spin {
